--- a/login.html
+++ b/login.html
@@ -240,35 +240,29 @@
         });
       }
 
-      async function handleRecovery(email) {
-        if (!email || !email.trim()) return;
+      async function handleRecovery() {
+        const email = document.getElementById('recovery-email').value;
         if (recoveryError) { recoveryError.classList.add('hidden'); recoveryError.textContent = ''; }
         if (recoverySuccess) recoverySuccess.classList.add('hidden');
         if (recoveryBtn) { recoveryBtn.disabled = true; recoveryBtn.textContent = 'Sending...'; }
 
-        try {
-          var path = window.location.pathname || '/';
-          var dir = path.substring(0, path.lastIndexOf('/') + 1);
-          var redirectTo = window.location.origin + dir + 'recovery.html';
-          var res = await supabaseClient.auth.resetPasswordForEmail(email.trim(), { redirectTo: redirectTo });
-          if (res.error) throw res.error;
-          if (recoverySuccess) recoverySuccess.classList.remove('hidden');
-        } catch (err) {
-          if (recoveryError) {
-            recoveryError.textContent = err && err.message ? err.message : 'Something went wrong.';
-            recoveryError.classList.remove('hidden');
-          }
-        }
+        const isLocal = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+        const redirectTo = isLocal
+          ? window.location.origin + (window.location.pathname.replace(/[^/]+$/, '') || '/') + 'update-password.html'
+          : 'https://joinchronos.com/update-password.html';
+        const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+          redirectTo: redirectTo,
+        });
+        if (error) console.error(error);
+        else if (recoverySuccess) recoverySuccess.classList.remove('hidden');
+
         if (recoveryBtn) { recoveryBtn.disabled = false; recoveryBtn.textContent = 'Send Recovery Link'; }
       }
 
       if (recoveryForm) {
         recoveryForm.addEventListener('submit', function (e) {
           e.preventDefault();
-          var emailInput = document.getElementById('recovery-email');
-          var email = emailInput ? emailInput.value.trim() : '';
-          if (!email) return;
-          handleRecovery(email);
+          handleRecovery();
         });
       }
     })();
