--- a/dashboard.html
+++ b/dashboard.html
@@ -133,7 +133,7 @@
     </div>
   </div>
 
-  <div class="min-h-screen">
+  <div class="min-h-screen flex flex-col">
     <!-- Bio-Clock Header -->
     <header class="border-b border-white/10 bg-carbon/80 backdrop-blur-sm sticky top-0 z-50">
       <div class="max-w-[1600px] mx-auto px-6 md:px-10 py-4">
@@ -147,9 +147,23 @@
       </div>
     </header>
 
-    <!-- Main Dashboard -->
-    <main class="max-w-[1600px] mx-auto px-6 md:px-10 py-10 md:py-16">
-      <div class="space-y-10">
+    <div class="flex flex-1">
+      <!-- Sidebar: Protocol Mandate -->
+      <aside class="hidden md:block w-64 lg:w-72 shrink-0 border-r border-white/5 bg-carbon/60 py-8 pl-6 pr-5">
+        <div class="border-t border-sage/20 pt-6 bg-carbon rounded-sm">
+          <h2 class="text-white/70 text-[10px] font-medium tracking-[0.25em] uppercase mb-5">CHRONOS MISSION</h2>
+          <p class="text-white/45 text-xs font-light leading-relaxed tracking-wide mb-4">
+            Standard medicine is Reactive—it waits for failure.
+          </p>
+          <p class="text-white/45 text-xs font-light leading-relaxed tracking-wide">
+            Chronos is Autonomous—we synthesize your Bio-data into a single daily directive.
+          </p>
+        </div>
+      </aside>
+
+      <!-- Main Dashboard -->
+      <main class="flex-1 min-w-0 max-w-[1600px] mx-auto px-6 md:px-10 py-10 md:py-16">
+        <div class="space-y-10">
         <!-- Cognitive Performance Forecast -->
         <section class="glass rounded-2xl p-6 md:p-8 card-hover">
           <h3 class="text-white/50 text-xs font-medium tracking-widest uppercase mb-6">Cognitive Performance Forecast</h3>
@@ -538,6 +552,7 @@
         </section>
       </div>
     </main>
+    </div>
   </div>
 
   <!-- Lab ingestion notification toast -->
