--- a/dashboard.html
+++ b/dashboard.html
@@ -179,23 +179,19 @@
       </div>
     </header>
 
-    <div class="flex flex-1">
-      <!-- Sidebar: Protocol Mandate -->
-      <aside class="hidden md:block w-64 lg:w-72 shrink-0 border-r border-white/5 bg-carbon/60 py-8 pl-6 pr-5">
-        <div class="border-t border-sage/20 pt-6 bg-carbon rounded-sm">
-          <h2 class="text-white/70 text-[10px] font-medium tracking-[0.25em] uppercase mb-5">CHRONOS MISSION</h2>
-          <p class="text-white/45 text-xs font-light leading-relaxed tracking-wide mb-4">
-            Standard medicine is Reactive—it waits for failure.
-          </p>
-          <p class="text-white/45 text-xs font-light leading-relaxed tracking-wide">
-            Chronos is Autonomous—we synthesize your Bio-data into a single daily directive.
-          </p>
-        </div>
-      </aside>
+    <!-- Chronos Mission (top, compact) -->
+    <div class="border-t border-sage/20 bg-carbon/40">
+      <div class="max-w-[1600px] mx-auto px-6 md:px-10 py-4">
+        <p class="text-white/45 text-xs font-light leading-relaxed tracking-wide">
+          <span class="text-white/60 text-[10px] font-medium tracking-[0.25em] uppercase">CHRONOS MISSION</span>
+          — Standard medicine is Reactive—it waits for failure. Chronos is Autonomous—we synthesize your Bio-data into a single daily directive.
+        </p>
+      </div>
+    </div>
 
-      <!-- Main Dashboard -->
-      <main class="flex-1 min-w-0 max-w-[1600px] mx-auto px-6 md:px-10 py-10 md:py-16">
-        <div class="space-y-10">
+    <!-- Main Dashboard (full width) -->
+    <main class="flex-1 max-w-[1600px] mx-auto w-full px-6 md:px-10 py-10 md:py-16">
+      <div class="space-y-10">
         <!-- Cognitive Performance Forecast -->
         <section class="glass rounded-2xl p-6 md:p-8 card-hover">
           <h3 class="text-white/50 text-xs font-medium tracking-widest uppercase mb-6">Cognitive Performance Forecast</h3>
@@ -632,7 +628,6 @@
         </section>
       </div>
     </main>
-    </div>
   </div>
 
   <!-- Lab ingestion notification toast -->
